--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
       }
 
       function HomePage(){
+
+        const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
         return <div>
-          <Header title="React" />
+          <Header title="Develop.Preview. Ship." />
+          <ul>
+            {names.map((name)=> (
+              <li key={name}>{name}</li>
+            ))}
+          </ul>
+
         </div>;
       }
       const root = ReactDOM.createRoot(app);
