--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         return <h1>{title}</h1>;
       }
 
+
       function HomePage(){
+        const [likes, setLikes] = React.useState(0);
+        
+        function handleClick(){
+          setLikes(likes + 1);
+        }
 
         const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
         return <div>
@@ -23,7 +29,7 @@
               <li key={name}>{name}</li>
             ))}
           </ul>
-
+          <button onClick={handleClick}>Like({likes})</button>
         </div>;
       }
       const root = ReactDOM.createRoot(app);
